[package]
name = "lab4_linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "lab"
path = "main.rs"

[[bin]]
name = "processor"
path = "processor.rs"

[[bin]]
name = "server"
path = "server.rs"

[[bin]]
name = "client"
path = "client.rs"
